# pipelines_rj_iplanrio

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: build_docker.yaml  cd_staging.yaml  code-tree-analysis.yaml  lint.yaml
.github/workflows/scripts/: code_tree_analysis.py  metadata_automation.py  register_flows.py  replace_docker_tag.py
pipelines/: __init__.py  constants.py  flows.py  utils.py
pipelines/alvaras/: __init__.py
pipelines/alvaras/dump_db/: flows.py  schedules.py
pipelines/dbt/: __init__.py  flows.py  schedules.py  tasks.py
pipelines/dbt_transform/: flows.py  schedules.py  tasks.py
pipelines/dump_equipamentos/: __init__.py
pipelines/dump_equipamentos/equipamentos_datario/: flows.py  schedules.py  tasks.py
pipelines/exemplo/nome_do_objetivo/: flows.py
pipelines/painel_obras/: __init__.py
pipelines/painel_obras/dump_data/: flows.py  schedules.py  tasks.py
pipelines/processorio/: __init__.py
pipelines/processorio/dump_db/: flows.py  schedules.py
pipelines/rj_sme/: __init__.py
pipelines/rj_sme/escolas_geo/: flows.py  schedules.py  tasks.py
pipelines/sici/: __init__.py
pipelines/sici/dump_api/: flows.py  schedules.py  tasks.py  utils.py
pipelines/sicop/: __init__.py
pipelines/sicop/dump_db/: flows.py  schedules.py
pipelines/taxi_rio/: constants.py  flows.py  utils.py
pipelines/taxi_rio/cities/: flows.py  tasks.py
pipelines/taxirio/: __init__.py  constants.py  schedules.py  tasks.py  types.py  utils.py
pipelines/taxirio/cities/: __init__.py  constants.py  flows.py  mongodb.py  schedules.py  tasks.py
pipelines/taxirio/cities_staging/: __init__.py  flows.py
pipelines/taxirio/discounts/: __init__.py  constants.py  flows.py  mongodb.py
pipelines/taxirio/discounts_staging/: __init__.py  flows.py
pipelines/taxirio/drivers/: __init__.py  constants.py  flows.py  mongodb.py  tasks.py
pipelines/taxirio/drivers_staging/: __init__.py  flows.py
pipelines/taxirio/metricsdriverunoccupieds/: __init__.py  constants.py  flows.py  mongodb.py
pipelines/taxirio/passengers/: __init__.py  constants.py  flows.py  mongodb.py
pipelines/taxirio/passengers_staging/: __init__.py  flows.py
pipelines/taxirio/paymentmethods/: __init__.py  constants.py  flows.py  mongodb.py
pipelines/taxirio/paymentmethods_staging/: __init__.py  flows.py
pipelines/taxirio/races/: __init__.py  constants.py  flows.py  mongodb.py
pipelines/taxirio/races_staging/: __init__.py  flows.py
pipelines/taxirio/rankingraces/: __init__.py  constants.py  flows.py  mongodb.py
pipelines/taxirio/rankingraces_staging/: __init__.py  flows.py
pipelines/taxirio/staging/: __init__.py  constants.py
pipelines/taxirio/users/: __init__.py  constants.py  flows.py  mongodb.py
pipelines/taxirio/users_staging/: __init__.py  flows.py
pipelines/templates/: __init__.py
pipelines/templates/run_dbt_model/: flows.py
pipelines/utils/: dbt.py  googleutils.py  monitor.py  schedules.py
pipelines/utils_dbt/: credential_injector.py  googleutils.py  infisical.py  monitor.py  schedules.py
queries/: dbt_project.yml  profiles.yml
queries/macros/: calculate_age.sql  calculate_jaccard.sql  remove_invalid_names.sql  validade_cns.sql  validate_cpf.sql
queries/models/adm_processo_interno_processorio/: dim_data.sql  dim_documento.sql  dim_setor_orgao.sql  dim_status_ciclo.sql  dim_tipo_evento.sql  fato_tramitacao_documento.sql
queries/models/adm_processo_interno_sicop/: _sources.yml  apenso.sql  assunto.sql  documento.sql  orgao.sql  processo.sql  schema.yml  (+1 more)
(+48 files in other folders)
