[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = [
  "Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>",
  "Pedro Mendes <pedro.hrmendes@prefeitura.rio>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dbt-bigquery = "^1.6.1"
google-cloud-storage = "^2.10.0"
lxml = "^5.2.2"
pandas = "^2.2.2"
pendulum = "^3.0.0"
prefect = "1.4.1"
pyarrow = "^17.0.0"
pymongo = "^4.8.0"
pymongoarrow = "^1.5.2"
zeep = "^4.2.1"
prefeitura-rio = { git = "https://github.com/prefeitura-rio/prefeitura-rio", rev = "1651b5ac4fc7397de19077497e1e4ab4a7781511", extras = [
  "pipelines",
  "pipelines-templates",
  "actions",
] }
aiohttp = "^3.11.14"
discord = "^2.3.2"
gitpython = "^3.1.44"
dbt-core = "1.8.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
basedpyright = "^1.17.2"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
loguru = "^0.7.0"
networkx = "^3.1"
pre-commit = "^3.3.3"
ruff = "^0.6.2"
taskipy = "^1.12.0"
typer = "^0.9.0"

[tool.basedpyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "ASYNC",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "FAST",
  "I",
  "N",
  "PL",
  "PT",
  "PTH",
  "RUF",
  "W",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.taskipy.tasks]
lint = "ruff check ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
